force-app/main/default/objects/ProductComplaintResponseEvent__e/ProductComplaintResponseEvent__e.object-meta.xml
<CustomObject>
    <label>Product Complaint Response Event</label>
    <pluralLabel>Product Complaint Response Events</pluralLabel>
</CustomObject>