force-app/main/default/objects/ProductComplaintResponseEvent__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <description>External System Case Id</description>
    <label>CaseId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>