force-app/main/default/objects/ProductComplaintResponseEvent__e/fields/TrackingId__c.field-meta.xml
<CustomField>
    <fullName>TrackingId__c</fullName>
    <label>Tracking Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>